--- a/index.html
+++ b/index.html
@@ -26,67 +26,101 @@
     </style>
 </head>
 <body>
-    <section>
+   <section>
         <h1>Classic Video Collection</h1>
         <h2>By:Adam Hopkins</h2>
         <hr class="black-bar">
        <main>
         <section>
             <h1>Interpol</h1>
-            <video controls width="640" height="360" poster="Images\Social_Sharing_Image.webp" aria-label="Sample video">
-                <source src="Media\Interpol\Interpol - Obstacle 1 - InterpolVEVO (1080p, h264, youtube).mp4" type="video/mp4">
-                <source src="Images\4e601e32c2b94585b4f4e9d77d485735.webp" type="video/ogg">
+            <video controls width="640" height="360" poster="Social_Sharing_Image.webp" aria-label="Sample video">
+                <source src="8mb.video-vCB-1M8pB1oL.mp4" type="video/mp4">
+                <source src="4e601e32c2b94585b4f4e9d77d485735.webp" type="video/ogg">
                 Your browser does not support the video tag.
             </video>
             <figcaption>A demonstration video using semantic HTML5.</figcaption>
                 <hr class="black-bar">
         </section>
     </main>
-    </section>
     <script>
-      const videos = [
+    const videos = [
     {
-        src: "Interpol - Obstacle 1 - InterpolVEVO (1080p, h264, youtube).mp4",
+        src: "8mb.video-vCB-1M8pB1oL.mp4",
         type: "video/mp4",
-        poster: "Social_Sharing_Image.webp",
+        poster: "Images/Social_Sharing_Image.webp",
         caption: "Interpol - Obstacle 1"
     },
     {
-        src: "Interpol - NYC - InterpolVEVO (1080p, h264, youtube).mp4",
+        src: "8mb.video-AP1-dhFOTDwD.mp4",
         type: "video/mp4",
-        poster: "4e601e32c2b94585b4f4e9d77d485735.webp",
+        poster: "Images/4e601e32c2b94585b4f4e9d77d485735.webp",
         caption: "Interpol - NYC"
     },
     {
-        src: "Interpol - Slow Hands - InterpolVEVO (1080p, h264, youtube).mp4",
+        src: "8mb.video-B86-4gLY4aqg.mp4",
         type: "video/mp4",
-        poster: "4e601e32c2b94585b4f4e9d77d485735.webp",
+        poster: "Images/4e601e32c2b94585b4f4e9d77d485735.webp",
         caption: "Interpol - Slow Hands"
     },
      {
-        src: "Interpol - The Heinrich Maneuver - InterpolVEVO (480p, h264, youtube).mp4",
+        src: "8mb.video-68J-8T2g1PfH.mp4",
         type: "video/mp4",
-        poster: "Social_Sharing_Image.webp",
-        caption: "Interpol - Obstacle 1"
+        poster: "Images/Social_Sharing_Image.webp",
+        caption: "Interpol - The Heinrich Maneuver"
     },
     {
-        src: "Interpol - No I In Threesome - InterpolVEVO (360p, h264, youtube).mp4",
+        src: "8mb.video-fQZ-ggjZKg6D.mp4",
         type: "video/mp4",
-        poster: "4e601e32c2b94585b4f4e9d77d485735.webp",
+        poster: "Images/4e601e32c2b94585b4f4e9d77d485735.webp",
         caption: "Interpol - No I In Threesome"
     },
     {
-        src: "Interpol - All The Rage Back Home - InterpolVEVO (1080p, h264, youtube).mp4",
+        src: "8mb.video-Ia0-d7RFeMAr.mp4",
         type: "video/mp4",
-        poster: "4e601e32c2b94585b4f4e9d77d485735.webp",
+        poster: "Images/4e601e32c2b94585b4f4e9d77d485735.webp",
         caption: "Interpol - All The Rage Back Home"
     },
     {
-        src: "Interpol - Say Hello to the Angels (Official Audio) - Interpol (1080p, h264, youtube).mp4",
+        src: "8mb.video-7UQ-zOhUeDmT.mp4",
         type: "video/mp4",
-        poster: "4e601e32c2b94585b4f4e9d77d485735.webp",
+        poster: "Images/4e601e32c2b94585b4f4e9d77d485735.webp",
         caption: "Interpol - Say Hello to the Angels"   
     }
+    
+];
+
+function getRandomVideo() {
+    return videos[Math.floor(Math.random() * videos.length)];
+}
+
+window.addEventListener('DOMContentLoaded', () => {
+    const video = document.querySelector('video');
+    const figcaption = document.querySelector('figcaption');
+    const randomVideo = getRandomVideo();
+
+    // Remove all <source> elements
+    while (video.firstChild) {
+        video.removeChild(video.firstChild);
+    }
+
+    // Add new <source>
+    const source = document.createElement('source');
+    source.src = randomVideo.src;
+    source.type = randomVideo.type;
+    video.appendChild(source);
+
+    // Update poster
+    video.poster = randomVideo.poster;
+
+    // Update caption
+    if (figcaption) {
+        figcaption.textContent = randomVideo.caption;
+    }
+
+    // Load the new video
+    video.load();
+});
+
     
 ];
 
